# Neural-Pixel

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
resources/: neural_pixel.bat  styles.css
src/: cmd_generator.c  cmd_generator.h  constants.c  constants.h  dropdown_widgets.c  dropdown_widgets.h  file_utils.c  file_utils.h  generate_cb.c  generate_cb.h  global.h  handle_cache.c  handle_cache.h  main.c  png_utils.c  png_utils.h  str_utils.c  str_utils.h  structs.h  widgets_cb.c  widgets_cb.h
web/app/: main.py
web/static/: index.html  style.css
